/issue returns signature value digest
